<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackgroundColor"
    android:clipToPadding="false"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/light_theme_color_blue"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivNotification"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:src="@color/no_connection"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvNotification"
            style="@style/NoticeAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/light_theme_color_back_elevated"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Нет подключения" />

        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_marginStart="-100dp"
            android:src="@drawable/i_day_and_night"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivPlace"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_pin"
                app:tint="?attr/regionColor" />

            <TextView
                android:id="@+id/tvRegion"
                style="@style/TextAppearance.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                android:textColor="?attr/regionColor"
                tools:text="Москва, Россия" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvMinMaxTemp"
            style="@style/TextAppearance.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:textColor="?attr/regionColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llRegion"
            tools:text="Макс. 15°C / Мин. 14°C" />

        <ImageView
            android:id="@+id/ivFeelsLike"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_feels_like"
            app:layout_constraintBottom_toBottomOf="@id/tvFeelsLike"
            app:layout_constraintEnd_toStartOf="@id/tvFeelsLike"
            app:layout_constraintTop_toTopOf="@id/tvFeelsLike"
            app:tint="?attr/regionColor" />

        <TextView
            android:id="@+id/tvFeelsLike"
            style="@style/TextAppearance.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:textColor="?attr/regionColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMinMaxTemp"
            tools:text="Ощущается как: 15°C" />

        <TextView
            android:id="@+id/tvTemp"
            style="@style/TextAppearance.LargeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="16dp"
            android:textColor="?attr/titleColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMinMaxTemp"
            tools:text="15°C" />

        <TextView
            android:id="@+id/tvMain"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:textColor="?attr/titleColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTemp"
            tools:text="Небольшой дождь" />

        <ImageView
            android:id="@+id/ivHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="16dp"
            android:src="@drawable/ic_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMain"
            app:tint="?attr/regionColor" />

        <TextView
            android:id="@+id/tvHumidityText"
            style="@style/TextAppearance.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/humidity_text"
            android:textColor="?attr/regionColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivHumidity" />

        <TextView
            android:id="@+id/tvHumidity"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:textColor="?attr/titleColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHumidityText"
            tools:text="29%" />

        <ImageView
            android:id="@+id/ivWind"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_wind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHumidity"
            app:tint="?attr/regionColor" />

        <TextView
            android:id="@+id/tvWindText"
            style="@style/TextAppearance.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/wind_text"
            android:textColor="?attr/regionColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivWind" />

        <TextView
            android:id="@+id/tvWind"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:textColor="?attr/titleColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWindText"
            tools:text="7 м/с" />

        <ImageView
            android:id="@+id/ivSunset"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_sunset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWind"
            app:tint="?attr/regionColor" />

        <TextView
            android:id="@+id/tvSunsetText"
            style="@style/TextAppearance.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/sunset_text"
            android:textColor="?attr/regionColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivSunset" />

        <TextView
            android:id="@+id/tvSunset"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:textColor="?attr/titleColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSunsetText"
            tools:text="18:02" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>